--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,21 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 async-timeout==4.0.3
 attrs==24.2.0
+Brotli==1.1.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 frozenlist==1.4.1
 idna==3.10
 magic-filter==1.0.12
 multidict==6.1.0
+mutagen==1.47.0
 propcache==0.2.0
+pycryptodomex==3.21.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 requests==2.32.3
 typing_extensions==4.12.2
 urllib3==2.2.3
+websockets==13.1
 yarl==1.15.3
+yt-dlp==2024.10.22
